<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Cart">



    <TextView
        android:id="@+id/textView2"
        android:layout_width="341dp"
        android:layout_height="38dp"
        android:fontFamily="@font/be_vietnam"
        android:paddingEnd="16dp"
        android:text="@string/my_cart"
        android:textAlignment="viewStart"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eta2" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="390dp"
        android:layout_height="365dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cart_view"
                android:layout_width="0dp"
                android:layout_height="550dp"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginEnd="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="18dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

            </androidx.recyclerview.widget.RecyclerView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <TextView
        android:id="@+id/emptyTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/be_vietnam"
        android:gravity="center_horizontal"
        android:text="@string/emptyTxt"
        android:textColor="#FFAB91"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout11"
        android:layout_width="0dp"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView">

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Obama Police Station"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView33"
            app:layout_constraintStart_toEndOf="@+id/imageView12" />

        <TextView
            android:id="@+id/textView32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/be_vietnam"
            android:text="Place of Delivery"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="101dp"
            android:layout_height="18dp"
            android:layout_marginStart="8dp"
            android:text="Prep Period"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/eta2"
            app:layout_constraintTop_toBottomOf="@+id/eta2"
            app:layout_constraintVertical_bias="0.037" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="70dp"
            android:layout_height="35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/track_order" />

        <TextView
            android:id="@+id/eta2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="172dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/be_vietnam"
            android:text="15 Min "
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/textView32"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView23"
            android:layout_width="68dp"
            android:layout_height="49dp"
            app:layout_constraintBottom_toTopOf="@+id/textView25"
            app:layout_constraintStart_toStartOf="@+id/imageView12"
            app:layout_constraintTop_toTopOf="@+id/imageView12"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/delivery" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/checkOUT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/place_orderBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout11">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/subTotalTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sub_totalTxt"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TotalFeeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subTotalFeeTxt"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/DeliveryTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/deliveryTxt"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/DeliveryFeeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DeliveryFeeTxt"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/taxTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/taxTxt"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/taxFeeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taxFeeTxt"
                android:textSize="18sp" />

        </LinearLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:background="@color/teal_700" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="0.3"
            android:elevation="3dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TotalTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/totalTxt"
                android:textColor="#1DE9B6"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_total_fee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TotalFeeTxt"
                android:textColor="#1DE9B6"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/place_orderBtn"
        android:layout_width="352dp"
        android:layout_height="37dp"
        android:layout_margin="12dp"
        android:background="@drawable/card_background"
        app:layout_constraintBottom_toTopOf="@+id/coordinatorLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/place_orderTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/be_vietnam"
            android:gravity="center"
            android:text="@string/place_orderTxt"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.521" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/homeBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/homeBtnImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/home" />

                <TextView
                    android:id="@+id/homeBtntxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/be_vietnam"
                    android:gravity="center_horizontal"
                    android:text="Home"
                    android:textAlignment="center"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ProfileBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ProfileBtnImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/user"
                    tools:layout_weight="1" />

                <TextView
                    android:id="@+id/ProfileBtntxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/be_vietnam"
                    android:gravity="center_horizontal"
                    android:text="@string/ProfileBtntxt"
                    android:textAlignment="center"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cartBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/cartBtnImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/cart" />

                <TextView
                    android:id="@+id/cartBtntxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/be_vietnam"
                    android:gravity="center_horizontal"
                    android:text="Cart"
                    android:textAlignment="center"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/SupportBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/SupportBtnImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/support" />

                <TextView
                    android:id="@+id/SupportBtntxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/be_vietnam"
                    android:gravity="center_horizontal"
                    android:text="Support"
                    android:textAlignment="center"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/TrackOrderBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/TrackOrderBtntxtImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/track" />

                <TextView
                    android:id="@+id/TrackOrderBtntxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/be_vietnam"
                    android:gravity="center_horizontal"
                    android:text="@string/TrackOrderBtntxt"
                    android:textAlignment="center" />@string/TrackOrderBtntxt""
                android:textAlignment="center"
                android:textColor="#676767"
                android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>