<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Activity.LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Spinner
            android:id="@+id/country_code_spinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/grey_square_card"
            android:paddingStart="15dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/Enter_MobileNo"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="5dp"
            android:layout_weight="3"
            android:background="@drawable/grey_square_card"
            android:cursorVisible="true"
            android:ems="10"
            android:hint="@string/mobile_number"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:maxLength="10"
            android:paddingStart="10dp"
            android:phoneNumber="true"
            android:textAlignment="center"
            android:textColor="#757575"
            android:textColorHint="#757575"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/Continue_login"
            android:layout_width="172dp"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="@drawable/card_background"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/continue_login"
            android:textColor="#000000"
            app:layout_constraintWidth_percent="0.6" />

        <ProgressBar
            android:id="@+id/verification_bar"
            android:layout_width="44dp"
            android:layout_height="47dp"
            android:layout_gravity="center"
            android:visibility="gone" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/T_Cs"
        android:textColor="@android:color/tertiary_text_dark"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
