<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Activity.Profile.AccountDetails">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/backbtn"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/back" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:fontFamily="@font/be_vietnam"
                android:gravity="center|center_horizontal"
                android:text="Account Details"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="192dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/profile_card"
                android:layout_width="192dp"
                android:layout_height="192dp"
                app:cardCornerRadius="250dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/profilepic"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/add_image" />

                    <ImageView
                        android:id="@+id/edit_profilepic"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="bottom|end"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:src="@drawable/ic_edit" />
                </FrameLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/firstname"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="8dp"
            android:background="@drawable/grey_square_card"
            android:ems="10"
            android:fontFamily="@font/be_vietnam"
            android:hint="@string/firstname"
            android:inputType="textPersonName"
            android:textColor="@android:color/secondary_text_light"
            android:textColorHint="@android:color/secondary_text_light"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/lastname"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="8dp"
            android:background="@drawable/grey_square_card"
            android:ems="10"
            android:fontFamily="@font/be_vietnam"
            android:hint="@string/lastname"
            android:inputType="textPersonName"
            android:textColor="@android:color/secondary_text_light"
            android:textColorHint="@android:color/secondary_text_light"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="8dp"
            android:background="@drawable/grey_square_card"
            android:ems="10"
            android:fontFamily="@font/be_vietnam"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/secondary_text_light"
            android:textColorHint="@android:color/secondary_text_light"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/PhoneNo"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="8dp"
            android:background="@drawable/grey_square_card"
            android:ems="10"
            android:fontFamily="@font/be_vietnam"
            android:hint="@string/phoneno"
            android:inputType="phone"
            android:textColor="@android:color/secondary_text_light"
            android:textColorHint="@android:color/secondary_text_light"
            android:textSize="14sp" />

    </LinearLayout>

    <Button
        android:id="@+id/Update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/card_background"
        android:text="Update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
